--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,15 @@
-﻿- raw: "{E}此人受凌云门之托盗走了我派情报，望能有门人或侠士速速追回！"
+﻿- raw: 华昊
+  result: Hua Hao
+  badtrans: true
+  direct: Hua Hao
+  literal: Hua Hao
+- raw: 诡手说完，那怪人便除掉了那名弟子。
+  result: After Gui Shou finished speaking, he eliminated his disciple.
+  badtrans: true
+
+- raw: 你怎么知道，死的一定是我们？
+  result: How do you know that we will definitely be the ones who die?
+- raw: "{E}此人受凌云门之托盗走了我派情报，望能有门人或侠士速速追回！"
   result: "{E}, This person was entrusted by Soaring Cloud Sect to steal our sect's information. We hope that a disciple or hero can quickly retrieve it!"
 - raw: “杂之广义，无所不包”乃我派之根基，兼收百家之长又有何错？书院弟子不是向来以仁为己任么？今日为何如此咄咄逼人？
   result: "The broad meaning of 'inclusiveness, embracing all' is the foundation of our sect. What is wrong with learning from the strengths of a hundred schools? Isn't it the duty of the academy disciples to uphold benevolence? Why are you being so aggressive today?"
