First cut of update

--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,9 @@
-﻿- raw: 华昊
+﻿- raw: 现在回答  
+  result: Answer now  
+  badtrans: true  
+  direct: now answer  
+  literal: xianzai huida
+- raw: 华昊
   result: Hua Hao
   badtrans: true
   direct: Hua Hao
@@ -6,7 +11,6 @@
 - raw: 诡手说完，那怪人便除掉了那名弟子。
   result: After Gui Shou finished speaking, he eliminated his disciple.
   badtrans: true
-
 - raw: 你怎么知道，死的一定是我们？
   result: How do you know that we will definitely be the ones who die?
 - raw: "{E}此人受凌云门之托盗走了我派情报，望能有门人或侠士速速追回！"
