--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1,4 +1,9 @@
 ﻿# Terms
+- raw: 护卫  
+  result: Guard  
+  badtrans: false  
+  direct: protect defend  
+  literal: hu wei
 - raw: 心魔  
   result: Inner Demon  
   badtrans: true  
@@ -1979,6 +1984,11 @@
   literal: Lingjun  
 
 # Items and Minerals
+- raw: 千叶露  
+  result: Thousand-Petal Dew  
+  badtrans: true  
+  direct: thousand leaf dew  
+  literal: qianye lu
 - raw: 百变链刃
   result: Shifting Chain Blade
   badtrans: true
@@ -2923,6 +2933,21 @@
   literal: Wang Zhanggui  
 
 # Names
+- raw: 凌将军  
+  result: General Ling  
+  badtrans: true  
+  direct: Ling General  
+  literal: Ling jiangjun
+- raw: 妙坊主  
+  result: Hall Master Miao
+  badtrans: true  
+  direct: wondrous hall master  
+  literal: miao fang zhu
+- raw: 妙玉音  
+  result: Miao Yuyin
+  badtrans: true  
+  direct: wondrous jade sound  
+  literal: miaoyu yin
 - raw: 华昊
   result: Hua Hao
   badtrans: true
@@ -5059,6 +5084,16 @@
   literal: Li San wen  
 
 # Factions & Places
+- raw: 醉音坊  
+  result: Drunken Sound Hall  
+  badtrans: true  
+  direct: drunken sound hall  
+  literal: zuiyin fang
+- raw: 天霜堂  
+  result: Heavenly Frost Hall
+  badtrans: true  
+  direct: heaven frost hall  
+  literal: tianshuang tang
 - raw: 昭月门
   result: Bright Moon Sect
   badtrans: true
