--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,18 @@
-﻿- raw: 现在回答  
+﻿- raw: 打手  
+  result: Thug  
+  badtrans: true  
+  direct: hit hand  
+  literal: da shou
+- raw: （灵均？别睡了，快出来。我与高姑娘在此地逗留太久，对现在的情况不是很清楚，给我些消息。）  
+  result: (Ling Jun? Stop sleeping, come out. Miss Gao and I have lingered here too long, we're not very clear on the current situation. Give me some news.)  
+  badtrans: true  
+- raw: （谢了。）  
+  result: (Much appreciated)  
+- raw: 可覆巢之下无完卵。昔日，我们同去的法华村还有……还有于我有恩的云鹤村，都已被卷入其中。若这些纷争动荡继续蔓延开来，这里的安宁又能持续多久呢？  
+  result: But when the nest is overturned, no egg is left unbroken. In the past, both Dharma Blossom Village, where we once went together, and Cloud Crane Village, which once showed me kindness, have been caught up in conflict. If this unrest continues to spread, how much longer can peace remain here?  
+- raw: 你方才也说了，覆巢之下无完卵。若想保他们真正的岁岁无忧，你要对抗的可不同以往我们遇到的那些山贼强盗。  
+  result: You just said it yourself, when the nest is overturned, no egg is left unbroken. If you truly want to keep them safe year after year, the enemy you'll face is nothing like the bandits and thieves we've dealt with before.  
+- raw: 现在回答  
   result: Answer now  
   badtrans: true  
   direct: now answer  
