--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,9 @@
-﻿- raw: 打手  
+﻿- raw: 村民  
+  result: Villager
+  badtrans: true  
+  direct: village people  
+  literal: cun min
+- raw: 打手  
   result: Thug  
   badtrans: true  
   direct: hit hand  
