Pre-mass update

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1984,6 +1984,11 @@
   literal: Lingjun  
 
 # Items and Minerals
+- raw: 天麻  
+  result: Heavenly Hemp  
+  badtrans: true  
+  direct: heaven hemp  
+  literal: tian ma
 - raw: 千叶露  
   result: Thousand-Petal Dew  
   badtrans: true  
