--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,56 @@
-﻿- raw: 村民  
+﻿- raw: 至于{P}，出门在外，希望你们能多多照应。  
+  result: As for {P}, while you're out, I hope you can take good care of each other.  
+  badtrans: true  
+  direct: as for {P}, out of door in outside, hope you all can look after more.  
+  literal: zhi yu {P}, chumen zaiwai, xiwang nimen neng duoduo zhaoying.
+- raw: 小芸的想法？  
+  result: Xiao Yun's thoughts?  
+  badtrans: true  
+  direct: Xiaoyun's idea?  
+  literal: Xiao Yun de xiangfa?
+- raw: 莫非你与小芸……  
+  result: Could it be that you and Xiao Yun...  
+  badtrans: true  
+  direct: could it be that you and Xiaoyun...  
+  literal: mo fei ni yu Xiao Yun...
+- raw: 老爷息怒。  
+  result: Master, please calm down
+  badtrans: true  
+  direct: master, stop anger.  
+  literal: laoye xi nu.
+- raw: 爹！  
+  result: Father!  
+  badtrans: true  
+  direct: father!  
+  literal: die!
+- raw: 若我记得不错……这应该是景王之女，就是当今楚皇的宁贵妃所赠。  
+  result: "If my memory serves me correctly... this belongs to be the daughter of King Jing, namely the Noble Consort Ning who is currently bestowed upon the Chu Emperor."
+- raw: 段军被围困三月有余，求援应当是早就收到了，却在段军全军覆没之际才出现。  
+  result: The Duan army was besieged for over three months, reinforcements should have arrived long ago, yet they only appeared when the entire Duan army was already wiped out.  
+  badtrans: true  
+  direct: Duan army was besieged over three months, request for aid should have been received long ago, yet appeared only when Duan army was completely destroyed.  
+  literal: Duan jun bei weikun san yue you yu, qiuyuan yingdang shi zao jiu shou dao le, que zai Duan jun quan jun fumie zhi ji cai chuxian.
+- raw: 将军的意思是，是景王？  
+  result: General, are you saying... it's King Jing?  
+  badtrans: true  
+  direct: General's meaning is, is Prince Jing?  
+  literal: jiangjun de yisi shi, shi Jing Wang?
+- raw: 景王不信段将军？  
+  result: King Jing did not trust General Duan?  
+  badtrans: true  
+  direct: Prince Jing not trust General Duan?  
+  literal: Jing Wang bu xin Duan jiangjun?
+- raw: 我说的难道不对吗，景王如此做，难道不会寒了高将军的心吗？若是他下一个起疑心的是您呢？  
+  result: Am I wrong in saying this? If King Jing acts this way, won't it chill General Gao's heart? What if you're the next one he starts to suspect?  
+  badtrans: true  
+  direct: what I said is it not right, Prince Jing doing this, will it not chill General Gao's heart? what if the next one he grows suspicious of is you?  
+  literal: wo shuo de nandao bu dui ma, Jing Wang ruci zuo, nandao bu hui han le Gao jiangjun de xin ma? ruo shi ta xia yi ge qi yixin de shi nin ne?
+- raw: 那我就却之不恭了。  
+  result: Then I shall respectfully accept  
+  badtrans: true  
+  direct: then I refuse it would be impolite  
+  literal: na wo jiu que zhi bu gong le
+- raw: 村民  
   result: Villager
   badtrans: true  
   direct: village people  
