Massive clean up

--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,74 @@
-﻿- raw: 至于{P}，出门在外，希望你们能多多照应。  
+﻿- raw: "(点头）……嗯嗯嗯嗯！"
+  result: (Nods) ...mm mm mm mm!  
+  badtrans: true  
+  direct: (nods) ...mm mm mm mm!  
+  literal: (diantou) ...en en en en!
+- raw: 精通棋艺的高人在哪……  
+  result: Where is the master who excels in the art of chess...?  
+  badtrans: true  
+  direct: master who excels in chess skill where...?  
+  literal: jingtong qiyi de gaoren zai na...
+- raw: 大侠好像有心事？怎么...改变世界的大人物也有想不通的事吗？  
+  result: It seems like the hero has something on his mind? How is it... even someone who changes the world has things they can't figure out?  
+  badtrans: true  
+  direct: hero seems to have something on mind? how... change world big person also has things they can’t understand?  
+  literal: daxia haoxiang you xinshi? zenme... gaibian shijie de da renwu ye you xiang bu tong de shi ma?
+- raw: 小伙子，你不觉得柳大夫语气很奇怪吗？就像在交代遗言一样。  
+  result: Young man, don't you think Doctor Liu's tone is quite strange? It's as if he's giving his last words.  
+  badtrans: true  
+  direct: young man, you not think Dr. Liu's tone very strange? like giving his last words.  
+  literal: xiaohuizi, ni bu juede Liu daifu yuxi hen qiguai ma? jiu xiang zai jiaodai yi yan yiyang.
+- raw: 不错，这事……我还不知道怎么和百里大哥说……  
+  result: That's right, this matter... I still don't know how to talk to Senior Brother Baili about it...  
+  badtrans: true  
+  direct: not bad, this matter... I still don't know how with Brother Baili say...  
+  literal: bu cuo, zhe shi... wo hai bu zhidao zenme he Baili dage shuo...
+- raw: 我便是这里的村长啊，我听王白...也就是带您入村的那人所言，您需要白医师的药方，我这就赶不及地亲自送来了。  
+  result: I'm the village chief here. I heard from Wang Bai... the one who brought you into the village, that you need Doctor Bai's prescription. I rushed here personally with it as fast as I could.  
+  badtrans: true  
+  direct: I am here's village head ah, I heard from Wang Bai... also the one who brought you into village said, you need Dr Bai's prescription, I now hurry and personally sent it.  
+  literal: wo bian shi zheli de cunzhang a, wo ting Wang Bai... ye jiushi dai nin ru cun de na ren suoyan, nin xuyao Bai yishi de yaofang, wo zhe jiu gan buji de qinzi songlai le.
+- raw: 虽说鱼虾成群，但有人干扰如何能钓上凤尾鱼……  
+  result: Though the fish and shrimp may be plentiful, how can one catch a phoenix tail fish with someone causing interference...?  
+  badtrans: true  
+  direct: though fish and shrimp form groups, but with someone disturbing how can catch phoenix-tail fish...?  
+  literal: suishuo yuxia chengqun, dan you ren ganrao ruhe neng diao shang fengweiyu...
+- raw: 听说前些时日周诺还因为无惜夫人有了新欢大闹了一场。怎么一下子就……  
+  result: I heard that not long ago, Zhou Nuo caused quite a scene because Lady Wuxi had a new lover. How did things suddenly just...?  
+  badtrans: true  
+  direct: heard some days ago Zhou Nuo still because Lady Wuxi had new love made big scene. how suddenly just...?  
+  literal: tingshuo qianxie shiri Zhou Nuo hai yinwei Wu Xi furen you le xinhuan danao le yi chang. zenme yixiazi jiu...
+- raw: 或许我不应当持有此物，是还给张音师还是卖给淮陵的淮官人呢…  
+  result: Perhaps I shouldn't keep this item. Should I return it to Master Zhang Yin, or sell it to that official from Huailing...?  
+  badtrans: true  
+  direct: maybe I should not hold this thing, return to Master Zhang Yin or sell to Huailing's Huai official...?  
+  literal: huoxu wo bu yingdang chi you ci wu, shi huan gei Zhang Yin shi haishi mai gei Huailing de Huai guanren ne...
+- raw: 多谢大人，那...那我们先告辞了。  
+  result: Thank you, my lord. Then... we'll take our leave for now.  
+  badtrans: true  
+  direct: many thanks lord, then... then we first take leave.  
+  literal: duo xie daren, na... na women xian gaoci le.
+- raw: 老大说，这批货绝对不能漏掉，所以兄弟们都提前做了准备，不过奇怪的是，这趟活儿并没有想象中困难，相反，很轻易的...就得手了。  
+  result: The boss said we absolutely couldn't miss this shipment, so the brothers all got ready in advance. But strangely, the job wasn't as hard as we thought. In fact, it went down pretty easily...  
+  badtrans: true  
+  direct: boss said, this batch of goods absolutely cannot miss, so the brothers all prepared in advance, but strange thing is, this job wasn't as difficult as imagined, on the contrary, very easily... succeeded.  
+  literal: laoda shuo, zhe pi huo juedui bu neng lou diao, suoyi xiongdi men dou tiqian zuo le zhunbei, buguo qiguai de shi, zhe tang huor bing meiyou xiangxiang zhong kunnan, xiangfan, hen qingyi de... jiu deshou le.
+- raw: 大...大战若发，生灵涂炭，自然需要从长计议，这也是岳院长的遗志。  
+  result: If... if a great war breaks out, it will bring misery to the people, so of course we must plan carefully. This was also Dean Yue's final wish.  
+  badtrans: true  
+  direct: big... if war starts, living beings will suffer, naturally must make long-term plans, this is also Dean Yue's last will.  
+  literal: da... dazhan ruo fa, shengling tutan, ziran xuyao congchang jiyi, zhe ye shi Yue yuanzhang de yizhi.
+- raw: 谢...谢谢你这些年来的照顾。  
+  result: Th... Thank you for taking care of me all these years.  
+  badtrans: true  
+  direct: thank... thank you these years of care.  
+  literal: xie... xiexie ni zhexie nian lai de zhaogu.
+- raw: （...不行，我得去弄个清楚。）  
+  result: (...No, I need to go find out the truth.)  
+  badtrans: true  
+  direct: (...not okay, I must go make it clear.)  
+  literal: (...bu xing, wo dei qu nong ge qingchu.)
+- raw: 至于{P}，出门在外，希望你们能多多照应。  
   result: As for {P}, while you're out, I hope you can take good care of each other.  
   badtrans: true  
   direct: as for {P}, out of door in outside, hope you all can look after more.  
