--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,69 @@
-﻿- raw: "(点头）……嗯嗯嗯嗯！"
+﻿- raw: 我在帮段将军收尸体时才发现这玉佩，却与我的玉佩各为一半。  
+  result: I only discovered this jade pendant when I was helping collect General Duan's body. It's split in half, and one half matches my own pendant.  
+  badtrans: true  
+  direct: I while helping General Duan collect corpses just discovered this jade pendant, but with my jade pendant each is half.  
+  literal: wo zai bang Duan jiangjun shou shitian shi cai faxian zhe yupei, que yu wo de yupei ge wei yiban.
+- raw: 不错。  
+  result: That's right 
+  badtrans: true  
+  direct: not bad.  
+  literal: bu cuo.
+- raw: 你走吧，我自有分寸。  
+  result: You go ahead, I know my limits
+  badtrans: true  
+  direct: you go, I myself have measure.  
+  literal: ni zou ba, wo zi you fencun.
+- raw: 小子，你说交就交吗？  
+  result: Kid, you think I will just hand it over because you say so?  
+  badtrans: true  
+  direct: boy, you say hand over then hand over?  
+  literal: xiaozi, ni shuo jiao jiu jiao ma?
+- raw: 是又如何？  
+  result: So what if I did?  
+  badtrans: true  
+  direct: is then how?  
+  literal: shi you ruhe?
+- raw: 你们是谁？  
+  result: Who are you?  
+  badtrans: true  
+  direct: you all are who?  
+  literal: nimen shi shei?
+- raw: 没有没有，多谢你了。  
+  result: No, no, not at all. Thank you!  
+  badtrans: true  
+  direct: no no, many thanks to you.  
+  literal: meiyou meiyou, duo xie ni le.
+- raw: 他一般不在市集就在城郊处。  
+  result: If he is not at the markets, he will usually be at the outskirts of town.  
+  badtrans: true  
+  direct: he usually not at market then at city outskirts place.  
+  literal: ta yiban bu zai shiji jiu zai chengjiao chu.
+- raw: 这位小哥，我们想打探一下，昨日在附近你有见到有人拾取地上物品吗？  
+  result: Young man, we'd like to ask did you happen to see anyone picking something up off the ground around here yesterday?  
+  badtrans: true  
+  direct: this young man, we want inquire a bit, yesterday nearby you have see anyone pick up ground item?  
+  literal: zhe wei xiao ge, women xiang datan yixia, zuori zai fujin ni you jiandao you ren shiqu di shang wupin ma?
+- raw: 我们快追上去问问，这小贼在集市寻找下手机会，对过往行人会上心许多。  
+  result: We can catch up and ask them; this little thief is looking for a chance at the market, and will pay much more attention to passersby.  
+  badtrans: true  
+  direct: we quickly chase up to ask, this little thief at market looking for chance, to passing pedestrians will care much more.  
+  literal: women kuai zhui shang qu wen wen, zhe xiaozei zai shiji xunzhao xia shouji hui, dui guowang xingren hui shangxin xu duo.
+- raw: 不错，秦姑娘去市集找过了吗？  
+  result: That's right, Miss Qin, have you been to the market to look for it?  
+  badtrans: true  
+  direct: not bad, Miss Qin go market look for it already?  
+  literal: bu cuo, Qin guniang qu shiji zhao guo le ma?
+- raw: 是你们？  
+  result: Is it you?  
+  badtrans: true  
+  direct: is it you all?  
+  literal: shi nimen?
+- raw: 那秦姑娘想一想，可能是在何处遗落的。  
+  result: Miss Qin, think for a moment, it might be where you left it.  
+  badtrans: true  
+  direct: then Miss Qin think a moment, maybe at where lost it.  
+  literal: na Qin guniang xiang yixiang, keneng shi zai hechu yiluo de.
+- raw: "(点头）……嗯嗯嗯嗯！"
   result: (Nods) ...mm mm mm mm!  
   badtrans: true  
   direct: (nods) ...mm mm mm mm!  
@@ -11,7 +76,7 @@
 - raw: 大侠好像有心事？怎么...改变世界的大人物也有想不通的事吗？  
   result: It seems like the hero has something on his mind? How is it... even someone who changes the world has things they can't figure out?  
   badtrans: true  
-  direct: hero seems to have something on mind? how... change world big person also has things they can’t understand?  
+  direct: hero seems to have something on mind? how... change world big person also has things they can't understand?  
   literal: daxia haoxiang you xinshi? zenme... gaibian shijie de da renwu ye you xiang bu tong de shi ma?
 - raw: 小伙子，你不觉得柳大夫语气很奇怪吗？就像在交代遗言一样。  
   result: Young man, don't you think Doctor Liu's tone is quite strange? It's as if he's giving his last words.  
