--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,25 @@
-﻿- raw: 我在帮段将军收尸体时才发现这玉佩，却与我的玉佩各为一半。  
+﻿- raw: 只要将军您准备好一声令下，兄弟们随时可以出发！
+  result: As soon as you're ready to give the order, general, the brothers are ready to set out anytime!
+  badtrans: true
+  direct: As long as general you ready a single order, brothers anytime can set out!
+  literal: Zhi yao jiang jun nin zhun bei hao yi sheng ling xia, xiong di men sui shi ke yi chu fa!
+- raw: 好，那届时的庆功宴上，我定要将军备上最好的酒，同诸位不醉不归！
+  result: Good! At the victory banquet then, I'll have the best wine prepared for the general, and we shall all drink without end!
+  badtrans: true
+  direct: Good, at that time's celebration banquet, I will surely have general prepare the best wine, with everyone not drunk not return!
+  literal: Hao, na jie shi de qing gong yan shang, wo ding yao jiang jun bei shang zui hao de jiu, tong zhu wei bu zui bu gui!
+- raw: 来日方长，到时候我自会告知将军。
+  result: There's plenty of time; when the time comes, I will inform the general myself.
+  badtrans: true
+  direct: Future days still long, at that time I will personally inform the general.
+  literal: Lai ri fang chang, dao shi hou wo zi hui gao zhi jiang jun.
+- raw: 好！将军既有此心，我便不会将人才拒之门外。
+  result: Good! Since the general has such intent, I will not turn away talent.
+  badtrans: true
+  literal: Hao! Jiang jun ji you ci xin, wo bian bu hui jiang ren cai ju zhi men wai.
+- raw: 老朽虽远离朝堂，但门生弟子多在朝堂之上，他们虽然对宗和所行之事早有不满，但为人臣之道，仍然不得已做了诸多伤害贵军之事，如今天下已定，还望将军予以保全。
+  result: Though I have long been away from court, many of my disciples still serve there. They have long been discontent with Zong He's actions, but as loyal subjects, they had no choice but to commit many acts that harmed your army. Now that peace has been restored, I hope the general can show them mercy.
+- raw: 我在帮段将军收尸体时才发现这玉佩，却与我的玉佩各为一半。  
   result: I only discovered this jade pendant when I was helping collect General Duan's body. It's split in half, and one half matches my own pendant.  
   badtrans: true  
   direct: I while helping General Duan collect corpses just discovered this jade pendant, but with my jade pendant each is half.  
@@ -159,7 +180,7 @@
   direct: father!  
   literal: die!
 - raw: 若我记得不错……这应该是景王之女，就是当今楚皇的宁贵妃所赠。  
-  result: "If my memory serves me correctly... this belongs to be the daughter of King Jing, namely the Noble Consort Ning who is currently bestowed upon the Chu Emperor."
+  result: "If my memory serves me correctly... this belongs to be the daughter of the King Jing, namely the Noble Consort Ning who is currently bestowed upon the Chu Emperor."
 - raw: 段军被围困三月有余，求援应当是早就收到了，却在段军全军覆没之际才出现。  
   result: The Duan army was besieged for over three months, reinforcements should have arrived long ago, yet they only appeared when the entire Duan army was already wiped out.  
   badtrans: true  
@@ -168,17 +189,17 @@
 - raw: 将军的意思是，是景王？  
   result: General, are you saying... it's King Jing?  
   badtrans: true  
-  direct: General's meaning is, is Prince Jing?  
+  direct: General's meaning is, is King Jing?  
   literal: jiangjun de yisi shi, shi Jing Wang?
 - raw: 景王不信段将军？  
   result: King Jing did not trust General Duan?  
   badtrans: true  
-  direct: Prince Jing not trust General Duan?  
+  direct: King Jing not trust General Duan?  
   literal: Jing Wang bu xin Duan jiangjun?
 - raw: 我说的难道不对吗，景王如此做，难道不会寒了高将军的心吗？若是他下一个起疑心的是您呢？  
   result: Am I wrong in saying this? If King Jing acts this way, won't it chill General Gao's heart? What if you're the next one he starts to suspect?  
   badtrans: true  
-  direct: what I said is it not right, Prince Jing doing this, will it not chill General Gao's heart? what if the next one he grows suspicious of is you?  
+  direct: what I said is it not right, King Jing doing this, will it not chill General Gao's heart? what if the next one he grows suspicious of is you?  
   literal: wo shuo de nandao bu dui ma, Jing Wang ruci zuo, nandao bu hui han le Gao jiangjun de xin ma? ruo shi ta xia yi ge qi yixin de shi nin ne?
 - raw: 那我就却之不恭了。  
   result: Then I shall respectfully accept  
