--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,24 @@
-﻿- raw: 只要将军您准备好一声令下，兄弟们随时可以出发！
+﻿- raw: 好，那王爷先回王府吧，得空我再拜会。
+  result: Alright, then the prince should return to the manor first. I'll visit when I have the time.
+  badtrans: true
+  direct: Okay, then Prince should return to the manor first, when free I will visit.
+  literal: Hǎo, nà wáng yé xiān huí wáng fǔ ba, dé kòng wǒ zài bài huì.
+- raw: 你不会。
+  result: "That's not going to happen"
+  badtrans: true
+  direct: You do not know how.
+  literal: Ni bu hui.
+- raw: 王爷就不怕，我军入驻，你沦为阶下囚？
+  result: Aren't you afraid that after my army moves in and you will become a prisoner?
+  badtrans: true
+  direct: Prince, aren't you afraid? My army occupies, you become a prisoner of war?
+  literal: Wangye jiu bu pa, wo jun ruzhu, ni lun wei jiexia qiu?
+- raw: 卫王这是？
+  result: What is the Prince of Wei doing here?
+  badtrans: true
+  direct: Prince of Wei this is?
+  literal: Wei Wang zhe shi?
+- raw: 只要将军您准备好一声令下，兄弟们随时可以出发！
   result: As soon as you're ready to give the order, general, the brothers are ready to set out anytime!
   badtrans: true
   direct: As long as general you ready a single order, brothers anytime can set out!
