Bads and Swords have no eyes

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1,4 +1,9 @@
 ﻿# Terms
+- raw: 刀剑无眼
+  result: Blades and swords have no eyes
+  badtrans: true
+  direct: A sword has no eyes
+  literal: Dāo jiàn wú yǎn
 - raw: 护卫  
   result: Guard  
   badtrans: false  
