--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,44 @@
-﻿- raw: 好，那王爷先回王府吧，得空我再拜会。
+﻿- raw: 你让我赌吗，就像章武帝赌我会不会叛乱一样。
+  result: Are you asking me to gamble, like Emperor Zhangwu gambling whether I'd rebel?
+  badtrans: true
+  direct: you let me gamble? just like Emperor Zhangwu gamble I will not rebel same.
+  literal: ni rang wo du ma, jiu xiang Zhangwu Di du wo hui bu hui pan luan yi yang.
+- raw: 哪成想深略居然自尽了。
+  result: Who would've thought Shen Lue would actually take his own life?
+  badtrans: true
+  direct: who would think Shenlue actually self-ended.
+  literal: na cheng xiang shen lüe ju ran zi jin le.
+- raw: 这次的后续效果比原定计划更好，深略便以此为由狮子大张口讨要更多好处，与捭阖谷内部起了冲突。
+  result: The aftermath this time turned out better than the original plan, so Shen Lue used it as an excuse to make outrageous demands for more benefits, which led to conflict within Baihe Valley.
+  badtrans: true
+  direct: this time's follow-up outcome compared to original plan better, Shenlue then used this as reason lion big open mouth ask more benefits, with Bai He Valley inside started conflict.
+  literal: zhe ci de hou xu xiao guo bi yuan ding ji hua geng hao, shen lüe bian yi ci wei you shi zi da zhang kou tao yao geng duo hao chu, yu bai he gu nei bu qi le chong tu.
+- raw: 还说你不是捭阖谷的人。
+  result: And you still claim you're not from Baihe Valley.
+  badtrans: true
+  direct: still say you not are Bai He Valley's person.
+  literal: hai shuo ni bu shi bai he gu de ren.
+- raw: 你们……好你个大雪山，居然还自导自演！我真是瞎了眼才帮了你们！
+  result: You... damn you, Great Snow Mountain! You even staged the whole thing yourselves! I must've been blind to help you!
+  badtrans: true
+  direct: you... good you big snow mountain, actually even self-direct self-act! I really was blind only then helped you!
+  literal: nimen... hao ni ge da xue shan, jujran hai zi dao zi yan! wo zhen shi xia le yan cai bang le nimen!
+- raw: 卫王交代越快越好。
+  result: The Prince of Wei said the sooner, the better.
+  badtrans: true
+  direct: The King of Wei instructs the sooner, the better.
+  literal: Wèi wáng jiāodài yuè kuài yuè hǎo.
+- raw: 什么人敢来坏老子斛律巍的事，欠打！
+  result: Who dares mess with Lord Hulu Wei's business? You're asking for a beating!
+  badtrans: true
+  direct: What person dares come ruin your father Hulu Wei's business—deserves a beating!
+  literal: Shénme rén gǎn lái huài lǎozi Húlǜ Wēi de shì, qiàn dǎ!
+- raw: 少林轻功绝学，谁谓河广，一苇杭之。练成后身轻如燕，来去无影无踪，无迹可寻。
+  result: The Shaolin's supreme lightness skill, who says the river is wide? A single reed can cross it. Once perfected, the body becomes as light as a swallow, coming and going without a trace, leaving no sign behind.
+  badtrans: true
+  direct: Shaolin's lightness skill, who says the river is wide? A single reed can cross it. After training, the body is as light as a swallow, coming and going without shadow, no trace to be found.
+  literal: Shàolín qīng gōng jué xué, shuí wèi hé guǎng, yī wěi háng zhī. Liàn chéng hòu shēn qīng rú yàn, lái qù wú yǐng wú zōng, wú jì kě xún.
+- raw: 好，那王爷先回王府吧，得空我再拜会。
   result: Alright, then the prince should return to the manor first. I'll visit when I have the time.
   badtrans: true
   direct: Okay, then Prince should return to the manor first, when free I will visit.
@@ -1723,6 +1763,11 @@
   result: "Yang\u00A0Ruoshui"
 
 # Names
+- raw: 金石开
+  result: Jin Shikai
+  badtrans: true
+  direct: Metal-stone-open
+  literal: Jīn Shí Kāi
 - raw: 方磨弈
   result: Fang Moyi
   badtrans: true
